[gd_scene load_steps=19 format=3 uid="uid://cjail0e0m4pxq"]

[ext_resource type="Script" uid="uid://t21hj5ya1ubi" path="res://button_hover.gd" id="1_23vhs"]
[ext_resource type="Script" uid="uid://bqgyy27yfaeo8" path="res://Scenes/dashboard.gd" id="1_42qyo"]
[ext_resource type="Theme" uid="uid://bu0ar07ugyrp6" path="res://button_theme.tres" id="1_bc6a6"]
[ext_resource type="StyleBox" uid="uid://q37ofqwrwb84" path="res://hover_button_style.tres" id="2_ly5nh"]
[ext_resource type="StyleBox" uid="uid://b4v7tnml20sk0" path="res://base_button_style.tres" id="2_vyiww"]
[ext_resource type="PackedScene" uid="uid://cike150wbqadn" path="res://MeterBar.tscn" id="6_kql8j"]

[sub_resource type="LabelSettings" id="LabelSettings_42qyo"]
font_size = 35
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gt2mv"]
bg_color = Color(0, 0.589851, 0.494411, 1)
skew = Vector2(-0.1, 0)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76h3o"]
bg_color = Color(0.612186, 9.14484e-07, 0.356579, 1)
skew = Vector2(0.16, 0.11)
border_width_left = 5
border_width_top = 10
border_width_right = 20
border_width_bottom = 10
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23vhs"]
bg_color = Color(2.40654e-06, 0.722637, 0.27887, 1)
skew = Vector2(0.1, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 20
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vyiww"]
bg_color = Color(0.612186, 9.14484e-07, 0.356579, 1)
skew = Vector2(-0.16, -0.11)
border_width_left = 20
border_width_top = 10
border_width_right = 5
border_width_bottom = 10
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bw4wq"]
bg_color = Color(0.904673, 0.688743, 7.70092e-07, 1)
skew = Vector2(-0.1, 0)
border_width_left = 20
border_width_top = 10
border_width_right = 10
border_width_bottom = 20
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1kl5"]
bg_color = Color(0.612186, 9.14484e-07, 0.356579, 1)
skew = Vector2(-0.16, -0.11)
border_width_left = 5
border_width_top = 10
border_width_right = 20
border_width_bottom = 10
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lhl8p"]
bg_color = Color(1, 0.484535, 0.913406, 1)
skew = Vector2(-0.1, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 20
border_width_bottom = 20
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ly5nh"]
content_margin_left = 30.0
content_margin_top = 60.0
content_margin_right = 30.0
content_margin_bottom = 60.0
bg_color = Color(0.749007, 0.884392, 1, 1)
skew = Vector2(0.025, 0.06)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0, 0, 0, 1)
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1cli1"]
bg_color = Color(0.612186, 9.14484e-07, 0.356579, 1)
skew = Vector2(-0.15, -0.14)
border_width_left = 20
border_width_top = 10
border_width_right = 5
border_width_bottom = 10
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p5lni"]
bg_color = Color(0, 0.364488, 0.70416, 1)
skew = Vector2(0.045, 0.095)
border_width_left = 20
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1w0xl"]
corner_radius_top_left = 10000
corner_radius_top_right = 10000
corner_radius_bottom_right = 10000
corner_radius_bottom_left = 10000

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_42qyo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.755118, 0.903064, 0.908937, 1)

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer3"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.08
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.29
theme_override_constants/separation = -1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer3/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Label" type="Label" parent="MarginContainer3/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "WELCOME TO THE DASHBOARD"
label_settings = SubResource("LabelSettings_42qyo")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer3/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
theme = ExtResource("1_bc6a6")
theme_override_styles/panel = SubResource("StyleBoxFlat_gt2mv")

[node name="Label" type="Label" parent="MarginContainer3/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "DATE GOES HERE"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = -1

[node name="EmailButton" type="Button" parent="MarginContainer3/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_bc6a6")
theme_override_styles/hover = ExtResource("2_ly5nh")
theme_override_styles/normal = ExtResource("2_vyiww")
text = "EMAIL BUTTON"
script = ExtResource("1_23vhs")

[node name="MessagesButton" type="Button" parent="MarginContainer3/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/hover = SubResource("StyleBoxFlat_76h3o")
theme_override_styles/normal = SubResource("StyleBoxFlat_23vhs")
text = "MESSAGES BUTTON"
script = ExtResource("1_23vhs")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
theme_override_constants/separation = -1

[node name="NewsButton" type="Button" parent="MarginContainer3/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_bc6a6")
theme_override_styles/hover = SubResource("StyleBoxFlat_vyiww")
theme_override_styles/normal = SubResource("StyleBoxFlat_bw4wq")
text = "NEWS"
script = ExtResource("1_23vhs")

[node name="MinigamesButton" type="Button" parent="MarginContainer3/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme = ExtResource("1_bc6a6")
theme_override_styles/hover = SubResource("StyleBoxFlat_k1kl5")
theme_override_styles/normal = SubResource("StyleBoxFlat_lhl8p")
text = "MINIGAMES"
script = ExtResource("1_23vhs")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ly5nh")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.29
theme_override_styles/hover = SubResource("StyleBoxFlat_1cli1")
theme_override_styles/normal = SubResource("StyleBoxFlat_p5lni")
text = "ADVANCE TIME"
script = ExtResource("1_23vhs")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1w0xl")

[node name="Label" type="Label" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "PLAYER ICON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "PLAYER NAME"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.66

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "CYBER KNOWLEDGE"

[node name="Meter" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("6_kql8j")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "CYBER KNOWLEDGE"

[node name="MarginContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer2/VBoxContainer" instance=ExtResource("6_kql8j")]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "CYBER KNOWLEDGE"

[node name="MarginContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer3/VBoxContainer" instance=ExtResource("6_kql8j")]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "CYBER KNOWLEDGE"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer4/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer5/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "CYBER KNOWLEDGE"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer3/HBoxContainer/MarginContainer2/PanelContainer/MarginContainer2/VBoxContainer2/MarginContainer2/VBoxContainer/HBoxContainer5/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
