[gd_scene load_steps=14 format=3 uid="uid://dwfdyt80mdbs1"]

[ext_resource type="Script" uid="uid://dm3obyj5n8amm" path="res://Scenes/main_menu.gd" id="1_opfnp"]
[ext_resource type="PackedScene" uid="uid://bqjdf5oifnlaf" path="res://Scenes/wastelands.tscn" id="2_cp0ys"]
[ext_resource type="Texture2D" uid="uid://dep4kq4aijhcu" path="res://Assets/Icons/cybersafe_logo.png" id="3_yhxw7"]
[ext_resource type="PackedScene" uid="uid://cn7dyqqvvl6yb" path="res://bobbing.tscn" id="4_trj04"]
[ext_resource type="FontFile" uid="uid://n6jgyq5vp0dh" path="res://Assets/Fonts/future-earth.ttf" id="5_16hvj"]
[ext_resource type="PackedScene" uid="uid://bgdd6h2t46rse" path="res://avatar.tscn" id="6_vr1f0"]
[ext_resource type="Script" uid="uid://t21hj5ya1ubi" path="res://button_hover.gd" id="6_yhxw7"]
[ext_resource type="PackedScene" uid="uid://bsd3q418acec5" path="res://floating.tscn" id="7_cp0ys"]

[sub_resource type="FontVariation" id="FontVariation_t1dhk"]
base_font = ExtResource("5_16hvj")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cp0ys"]
bg_color = Color(0.321728, 0.321728, 0.321728, 1)
skew = Vector2(-0.405, -0.07)
border_width_left = 20
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
expand_margin_left = 20.0
expand_margin_right = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5egv6"]
bg_color = Color(0, 0, 0, 1)
skew = Vector2(0.1, 0)
border_width_left = 20
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
expand_margin_left = 20.0
expand_margin_right = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yhxw7"]
bg_color = Color(0.321728, 0.321728, 0.321728, 1)
skew = Vector2(-0.405, -0.07)
border_width_left = 20
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
expand_margin_left = 20.0
expand_margin_right = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trj04"]
bg_color = Color(0.321728, 0.321728, 0.321728, 1)
skew = Vector2(-0.405, -0.07)
border_width_left = 20
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
expand_margin_left = 20.0
expand_margin_right = 20.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_opfnp")

[node name="Wastelands" parent="." instance=ExtResource("2_cp0ys")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="ColorRect" parent="Wastelands" index="0"]
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_yhxw7")
stretch_mode = 2

[node name="bobbing" parent="MarginContainer/VBoxContainer/TextureRect" instance=ExtResource("4_trj04")]
float_radius = 10.0
float_speed = 0.5

[node name="PlayGame" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(550, 150)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = SubResource("FontVariation_t1dhk")
theme_override_font_sizes/font_size = 80
theme_override_styles/hover = SubResource("StyleBoxFlat_cp0ys")
theme_override_styles/normal = SubResource("StyleBoxFlat_5egv6")
text = "PLAY GAME"
script = ExtResource("6_yhxw7")

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(550, 150)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = SubResource("FontVariation_t1dhk")
theme_override_font_sizes/font_size = 80
theme_override_styles/hover = SubResource("StyleBoxFlat_yhxw7")
theme_override_styles/normal = SubResource("StyleBoxFlat_5egv6")
text = "Settings"
script = ExtResource("6_yhxw7")

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(550, 150)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = SubResource("FontVariation_t1dhk")
theme_override_font_sizes/font_size = 80
theme_override_styles/hover = SubResource("StyleBoxFlat_trj04")
theme_override_styles/normal = SubResource("StyleBoxFlat_5egv6")
text = "Credits"
script = ExtResource("6_yhxw7")

[node name="AvatarWrapper" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Avatar" parent="MarginContainer/AvatarWrapper" instance=ExtResource("6_vr1f0")]
layout_mode = 2
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1320.0
offset_top = 480.0
offset_right = 1720.0
offset_bottom = 880.0
size_flags_horizontal = 10
size_flags_vertical = 10

[node name="Floating" parent="MarginContainer/AvatarWrapper/Avatar" instance=ExtResource("7_cp0ys")]

[editable path="Wastelands"]
